Started on the IOS port
Started on the IOS port, still needs more work though as the AR app will currently crash when deployed to the IPhone X.

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,9 @@ Build/*
 Build/*/**
 !Build/*/PakBlacklist*.txt
 
+# Whitelist SSHKeys folder
+!Build/SSHKeys/**
+
 # Don't ignore icon files in Build
 !Build/**/*.ico
 
