--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,12 +17,18 @@ GlobalDefaultServerGameMode=None
 bExplicitCanvasChildZOrder=True
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-SigningCertificate=iPhone Developer: Chance Ivey (AP6BVS76S9)
-MobileProvision=iOS11.mobileprovision
-bSupportsPortraitOrientation=True
+SigningCertificate=iPhone Developer: Beau Marwaha (7K2R8L8DFV)
+MobileProvision=Island_AR__Beau_Only.mobileprovision
+bSupportsPortraitOrientation=False
 bSupportsUpsideDownOrientation=False
 FrameRateLock=PUFRL_60
 MinimumiOSVersion=IOS_9
+BundleIdentifier=com.IslandAR.1
+BundleDisplayName=IslandAR
+BundleName=IslandAR
+RemoteServerName=69.9.37.58
+RSyncUsername=user145558
+SSHPrivateKeyOverridePath=../../../../../Unreal_Projects/IslandAR/Build/SSHKeys/69.9.37.58/user145558/RemoteToolChainPrivate.key
 
 [/Script/Engine.Engine]
 bUseFixedFrameRate=True
@@ -176,4 +182,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
