Updated Engine INI
Updated Engine INI for IOS deploying

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -22,7 +22,7 @@ MobileProvision=IslandARProvision.mobileprovision
 bSupportsPortraitOrientation=False
 bSupportsUpsideDownOrientation=False
 FrameRateLock=PUFRL_60
-MinimumiOSVersion=IOS_9
+MinimumiOSVersion=IOS_11
 BundleIdentifier=com.brokenlogicgames.islandar
 BundleDisplayName=IslandAR
 BundleName=IslandAR
@@ -31,6 +31,8 @@ RSyncUsername=user145558
 SSHPrivateKeyOverridePath=
 EnableRemoteShaderCompile=False
 bEnableGameCenterSupport=False
+MaxShaderLanguageVersion=2
+AdditionalPlistData=<key>NSCameraUsageDescription</key><string>UE4 needs permission to use the camera in order to use ARKit.</string>
 
 [/Script/Engine.Engine]
 bUseFixedFrameRate=True
