Finished IOS Porting Update
Finished IOS porting update by enabling the AppleARKit plugin (which was not enabled by default)

--- a/IslandAR.uproject
+++ b/IslandAR.uproject
@@ -7,6 +7,14 @@
 		{
 			"Name": "GoogleARCore",
 			"Enabled": true
+		},
+		{
+			"Name": "AppleARKit",
+			"Enabled": true
+		},
+		{
+			"Name": "AppleARKitFaceSupport",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
