--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -42,9 +42,10 @@ FixedFrameRate=60.000000
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_HandheldARBP",NewGameName="/Script/IslandAR")
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-Orientation=Sensor
-MinSDKVersion=14
-TargetSDKVersion=24
+Orientation=SensorLandscape
+MinSDKVersion=21
+TargetSDKVersion=28
+PackageName=com.brokenlogicgames.islandar
 
 [/Script/OculusHMD.OculusHMDRuntimeSettings]
 bAutoEnabled=True
@@ -142,6 +143,9 @@ AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
+[/Script/Engine.UserInterfaceSettings]
+UIScaleRule=ShortestSide
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -186,5 +190,4 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
