Added Base Asset Map
Added Base Asset Map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/HandheldARBP/Maps/HandheldARBlankMap.HandheldARBlankMap
+EditorStartupMap=/Game/Content/Maps/MAP_Assets.MAP_Assets
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -8,7 +8,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/HandheldARBP/Maps/HandheldARBlankMap.HandheldARBlankMap
+GameDefaultMap=/Game/Content/Maps/MAP_Assets.MAP_Assets
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/HandheldARBP/Blueprints/GameFramework/BP_ARGameMode.BP_ARGameMode_C
 GlobalDefaultServerGameMode=None
@@ -190,3 +190,5 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+
