--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,7 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+ios_development.cer
+CertificateSigningRequest.csr
+DeveloperKeyPair.key
+IslandAR_AllDevices.mobileprovision
