Fixed Level Loading
Added the levels explicitly in build settings to get the levels loading correctly from the main menu.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,3 +7,54 @@ bSupportAR=True
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="MobileStarterContent.upack,PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=True
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=False
+bSharedMaterialNativeLibraries=False
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bEncryptIniFiles=False
+bEncryptPakIndex=False
+bSkipEditorContent=False
+bSkipMovies=False
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_MainMenu")
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_01_Level_01")
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_01_Level_02")
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_01_Level_03")
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_02_Level_01")
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_02_Level_02")
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_02_Level_03")
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_03_Level_01")
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_03_Level_02")
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_03_Level_03")
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_04_Level_01")
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_04_Level_02")
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_04_Level_03")
+bNativizeBlueprintAssets=False
+bNativizeOnlySelectedBlueprints=False
+
+
