Updated Level Spawning
Updated level spawning so that the player can choose where to spawn the level. Refactored the rest of the code base to support this change. NOTE: The reposition level function in the settings menu will allow the player to reposition the level to another detected plane but it will now restart the level as well.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -54,6 +54,7 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_04_Level_01")
 +MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_04_Level_02")
 +MapsToCook=(FilePath="/Game/Content/Maps/MAP_World_04_Level_03")
++MapsToCook=(FilePath="/Game/Content/Maps/MAP_OverWorld")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
