Imported Additional Assets
Imported the bounce mushroom textures and applied them to the existing model in-game, imported the app icons in all sizes and applied them in the project settings.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,7 +24,7 @@ bSupportsUpsideDownOrientation=False
 FrameRateLock=PUFRL_60
 MinimumiOSVersion=IOS_11
 BundleIdentifier=com.brokenlogicgames.islandar
-BundleDisplayName=IslandAR
+BundleDisplayName=Rebalance
 BundleName=IslandAR
 RemoteServerName=69.9.37.58
 RSyncUsername=user145558
@@ -46,6 +46,7 @@ Orientation=SensorLandscape
 MinSDKVersion=21
 TargetSDKVersion=28
 PackageName=com.brokenlogicgames.islandar
+ApplicationDisplayName=Rebalance
 
 [/Script/OculusHMD.OculusHMDRuntimeSettings]
 bAutoEnabled=True
@@ -190,4 +191,7 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+ApplicationDisplayName=Rebalance
 
