Updated gitignore to include app icons
Updated the gitignore to include the application icon folders and images

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,26 @@ Build/*
 Build/*/**
 !Build/*/PakBlacklist*.txt
 
+# Whitelist IOS and Andriod ICON folders
+!Build/IOS
+!Build/IOS/Resources
+!Build/IOS/Resources/Graphics
+!Build/IOS/Resources/Graphics/*
+!Build/Android
+!Build/Android/res
+!Build/Android/res/drawable
+!Build/Android/res/drawable/*
+!Build/Android/res/drawable-hdpi
+!Build/Android/res/drawable-hdpi/*
+!Build/Android/res/drawable-ldpi
+!Build/Android/res/drawable-ldpi/*
+!Build/Android/res/drawable-mdpi
+!Build/Android/res/drawable-mdpi/*
+!Build/Android/res/drawable-nodpi
+!Build/Android/res/drawable-nodpi/*
+!Build/Android/res/drawable-xodpi
+!Build/Android/res/drawable-xodpi/*
+
 # Whitelist SSHKeys folder
 !Build/SSHKeys/**
 
